# Finsight

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
data/demo/: Acme_Corp_10-K_2023.txt  Beta_Inc_10-K_2023.txt  Gamma_Ltd_Annual_2023.txt  ground_truth.json
data/sample/: Nimbus_Systems_10-K_2024.txt  Orion_Foods_10-K_2024.txt  Vertex_Materials_financials_2024.csv
docs/: FinSight_Technical_Documentation.docx
src/finsight/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/finsight/cache/: __init__.py  cell_cache.py
src/finsight/calc/: __init__.py  engine.py
src/finsight/chunking/: __init__.py  chunker.py
src/finsight/eval/: __init__.py  metrics.py
src/finsight/extraction/: __init__.py  numeric_store.py
src/finsight/grid/: __init__.py  cell_engine.py  decompose.py  store.py  verify.py
src/finsight/indexing/: __init__.py  dual_index.py  embeddings.py
src/finsight/ingestion/: __init__.py  ingest.py
src/finsight/llm/: __init__.py  client.py  mock.py
src/finsight/retrieval/: __init__.py  retriever.py
tests/: conftest.py  test_calc.py  test_eval.py  test_extraction.py  test_indexing.py  test_pipeline.py
