[project]
name = "finsight"
version = "2.0.0"
description = "FinSight v2.0 — Grid-Native Agentic Analysis for Structured Financial Documents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FinSight" }]

# Core dependencies — intentionally lightweight so the reference implementation
# runs offline with the bundled demo dataset and no GPU / model downloads.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "duckdb>=0.10",
    "rank-bm25>=0.2.2",
    "tenacity>=8.2",
    "anthropic>=0.39",
    "diskcache>=5.6",
]

[project.optional-dependencies]
# Faithful "heavy" stack from the architecture doc. Install with: pip install -e ".[ml]"
ml = [
    "sentence-transformers>=2.7",   # BGE embeddings
    "faiss-cpu>=1.8",               # dense ANN index
    "torch>=2.2",
]
# Document ingestion for real PDFs / Word docs (the demo dataset needs none of this).
ingest = [
    "pdfplumber>=0.11",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
# Interactive grid UI (the doc's recommended fast path).
ui = [
    "streamlit>=1.36",
    "streamlit-aggrid>=1.0.5",
]
# Evaluation harness.
eval = [
    "ragas>=0.1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
finsight = "finsight.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finsight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
